--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -8,16 +8,17 @@
 
 .image-container {
     position: relative;
+    margin-bottom: 8rem;
 }
 
 .image-container img {
     width: 100%;
-    height: 25rem;
+    height: 45rem;
     object-fit: cover;
     align-items: center;
-    padding: 15px;
-    border-radius: 25px;
-    margin-bottom: 5rem;
+    /* padding: 15px; */
+    /* border-radius: 25px; */
+
 }
 
 h1 {
