--- a/src/Articles/Article.css
+++ b/src/Articles/Article.css
@@ -12,6 +12,10 @@
     gap: 15px;
 }
 
+.article-card-img {
+    position: relative;
+}
+
 .article-card-img img {
     width: 100%;
     height: 280px;
@@ -21,14 +25,39 @@
 p {
     /* white-space: nowrap; */
     color: #6C757D;
-    overflow: hidden;
+
     font-size: 14px;
-    text-overflow: ellipsis;
+
+
 
 }
+
+
 
 h3 {
     color: #495057;
     font-size: 18px;
     line-height: 25px;
+}
+
+.article-card-date {
+    color: #6C757D;
+    font-size: 14px;
+}
+
+.card-tags {
+    position: absolute;
+    top: 1.25rem;
+    right: 1.25rem;
+    text-decoration: none;
+    color: white;
+    background: rgba(255, 255, 255, 0.20);
+    border-radius: 8px;
+    padding: 6px 10px;
+}
+
+.tag:not(:last-child) {
+    border-bottom: 1px solid white;
+    margin-bottom: 0.5rem;
+    padding-bottom: 0.5rem;
 }
